Performance tests for Maximum distance calculation
- using perf4j
- all performance statistics are logged via performance.logger
- GC details logged into gc.log