@@ -1,7 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'project-report'
 apply plugin: 'idea'
-apply plugin: 'cobertura'
 
 description = 'M-Index implementation in Java'
 version = '0.2'
@@ -24,16 +23,27 @@ repositories {
 dependencies {
     compile "net.jcip:jcip-annotations:1.0"
     compile "org.slf4j:slf4j-api:1.7.2"
-    compile "org.slf4j:slf4j-simple:1.7.2"
     compile "org.apache.commons:commons-math3:3.1"
+    testCompile "org.perf4j:perf4j:0.9.16"
     testCompile "org.hamcrest:hamcrest-all:1.3"
-    testCompile "org.testng:testng:6.7"
+    testCompile 'org.testng:testng:6.7'
+    testRuntime 'ch.qos.logback:logback-classic:1.0.9'
 }
 
 
 test {
     jvmArgs "-XX:-UseSplitVerifier"
     useTestNG() {
-        excludeGroups 'longRunning'
+        excludeGroups 'longRunning,perf'
+    }
+}
+
+task perfTest(type: Test) {
+    include '**/*PerfTest*'
+
+    maxHeapSize = "6192m"
+
+    jvmArgs = ['-verbose:gc', '-XX:+PrintGCDetails', '-XX:+PrintGCTimeStamps', '-Xloggc:gc.log']
+    useTestNG() {
     }
 }
